--- a/src/app/pages/developer/alliance-partner/alliance-partner.component.html
+++ b/src/app/pages/developer/alliance-partner/alliance-partner.component.html
@@ -1,36 +1,144 @@
 <style>
     main{
         position:relative;
-        left:100px;
-        width: calc(-webkit-fill-available - 300px);
+        width: calc(100% - 300px);
         padding: 24px 32px;
+    }
+
+    pre{
+        padding:16px;
+        font-weight: bold;
+        font-size:16px;
+        border: 1px solid grey;
+        border-radius: 10px;
     }
 </style>
 
+<div class="container-fluid d-flex">
 <main class="container">
-    <h1>Aliance Partners</h1>
+    <h1>Aliance Partner</h1>
     <br/>
-    <h4>Get Started</h4>
-    <p>The Toucan provides a sandbox environment which can be utilized to test your awesome creation before taking them Live. Toucan APIs are HTTP-based Restful API that use JWT token-based authentication. All APIs are stateless; both request and response are in JSON format.</p>
-    <p>While some Toucan features do not apply to the sandbox, such as issuing merchant statements etc, the sandbox has the same Toucan API feature set as the live environment. When a transaction is tested through a sandbox account, a mock transaction is created that behaves exactly like a transaction in the live environment and therefore using Toucan API calls, you can test and debug your apps without referencing any real or live Toucan data.</p>
+    <h4>Application Submit Request</h4>
+    <pre>
+        API URL
+
+        api/allp/application/submit
+
+        HTTP Method
+
+        POST
+
+        REQ/RES TYPE
+
+        Application/JSON
+    </pre>
     <br/>
 
-    <h4>Sandbox</h4>
-    <p>URL: <a href="https://sandbox.toucanus.com">https://sandbox.toucanus.com</a></p>
+    <table class="table table-striped">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">Field name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Data type</th>
+                <th scope="col">Mandatory</th>
+                <th scope="col">Length</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <p>Message ID</p>
+                </td>
+                <td>
+                    <p>Message ID for application submit request</p>
+                </td>
+                <td>
+                    <p>String</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Object</p>
+                </td>
+                <td>
+                    <p>Object content</p>
+                </td>
+                <td>
+                    <p>–</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Application status</p>
+                </td>
+                <td>
+                    <p>Specifies the application status “SUBMITTED”</p>
+                </td>
+                <td>
+                    <p>Enum</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>ID</p>
+                </td>
+                <td>
+                    <p>Specifies the request ID</p>
+                </td>
+                <td>
+                    <p>String</p>
+                </td>
+                <td>
+                    <p>Y</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Request type</p>
+                </td>
+                <td>
+                    <p>CREATE (Fixed value)</p>
+                </td>
+                <td>
+                    <p>String</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+                <td>
+                    <p>&nbsp;</p>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <br/><br/>
 
-    <p>You will need a JWT token (also referred as API Key) before any API can be successfully executed on Toucan Sandbox. Please use the provided Contact form on this website to request generation of test tokens. All generated tokens will have a six-month year expiry.</p>
+    <h4>Merchant Inquiry</h4>
+    <p>This API can be used by the Alliance Partner/Aggregator to inquire a merchant under it using the unique Merchant ID assigned to it. Response will give all the details of that merchant.</p>
 
-    <p>Toucan sandbox and live only supports https POST for all API methods, Message structure is detailed in below section, incoming message need to confirm to provide json specification of messages.</p>
-
-    <p>It is better practise to test any change in sandbox environment before feature is is made live in production environment. </p>
-
-    <p>Browse through the toucan API guide for request and response message structure, checkout FAQ section and still you have query or suggestions we would love to receive an email at support&#64;toucanus.com</p>
-
-    <h4>Run in Postman button</h4>
-    <p>The quicker you can get users started, the better. One way to jumpstart the configuration of an API is by using Run in Postman buttons. This can reduce more lengthy and tedious explanations about parameters and other configurations for an API.</p>
-
-    <h4>Authentication</h4>
-    <p>You will receive a token (API keys) via email to authenticate requests. Each token is valid only for a specific time frame generally six months. In case you lose them or need a fresh token please use contact form to generate.</p>
-    <p>Provided keys are for sandbox environments and once testing is completed you can receive production keys before go-live.</p>
-    <p>Use provided token as part of https header using key as “X-API-Key” and value as provided token.</p>
 </main>
+<div >
+    <app-rightnavsection [nav_list] = 'nav_list'></app-rightnavsection>
+</div>
+</div>
