--- a/src/app/pages/developer/quickstart/quickstart.component.html
+++ b/src/app/pages/developer/quickstart/quickstart.component.html
@@ -1,8 +1,7 @@
 <style>
     main{
         position:relative;
-        left:100px;
-        width: calc(-webkit-fill-available - 300px);
+        width: calc(100% - 300px);
         padding: 24px 32px;
     }
 
@@ -15,6 +14,7 @@
     }
 </style>
 
+<div class="container-fluid d-flex">
 <main class="container">
     <h1>Quickstart</h1>
     <br/>
@@ -82,7 +82,8 @@
     </pre>
 
     <h5>HTTP Request Data Structure</h5>
-
 </main>
-
-<app-rightnavsection></app-rightnavsection>
+<div>
+    <app-rightnavsection [nav_list] = 'nav_list'></app-rightnavsection>
+</div>
+</div>
