--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div>
     <app-topnav></app-topnav>
 
-    <div style="display:flex">
+    <div class="d-flex">
         <app-sidenav></app-sidenav>
         <router-outlet></router-outlet>
     </div>
