--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,13 +1,20 @@
 <style>
-    main{
-        position:relative;
-        left:100px;
-        width: calc(-webkit-fill-available - 400px);
+    main {
+        position: relative;
+        width: calc(100% - 300px);
         padding: 24px 32px;
+    }
+
+    pre {
+        padding: 16px;
+        font-weight: bold;
+        font-size: 16px;
+        border: 1px solid grey;
+        border-radius: 10px;
     }
 </style>
 
-<main class="container">
-
-    
-</main>
+    <main class="container">
+        <ng-content></ng-content>
+        <app-rightnavsection [nav_list]="nav_list"></app-rightnavsection>
+    </main>
