--- a/src/app/components/rightnavsection/rightnavsection.component.html
+++ b/src/app/components/rightnavsection/rightnavsection.component.html
@@ -1,12 +1,8 @@
 <style>
-    .icon{
-        display:flex;
-      flex-direction: column;
-    }
     section{
       position: fixed;
       min-height: -webkit-fill-available;
-      min-width: 300px;
+      min-width: 250px;
       right: 0px;
       font-size: 14px;
       font-weight: bold;
@@ -14,8 +10,13 @@
 </style>
 
 
-<section class="card shadow bg-white d-none d-lg-block p-2">
-  <div  *ngFor="let navItem of nav_list">
-      <p class="text-secondary">{{navItem.name}}</p>
+<section class="card  bg-white d-none d-lg-block p-2 pt-5 h-100">
+
+  <div class="d-flex flex-column"  *ngFor="let navItem of nav_list">
+    <div class="mt-1 p-2">
+      <a href="" class="text-primary" style="text-decoration: none;">
+        <i class="bi bi-caret-right-fill"></i> {{navItem.name}}
+      </a>
+    </div>
   </div>
 </section>
