--- a/src/app/pages/developer/alliance-partner/alliance-partner.component.html
+++ b/src/app/pages/developer/alliance-partner/alliance-partner.component.html
@@ -9,12 +9,17 @@
 </style>
 
 <div class="d-flex">
+
     <app-main >
-        <div>
+        <h1>Alliance Partners</h1>
+        <br />
+        
+        <app-accordian></app-accordian>
+        <!-- <div>
             <h1>Alliance Partners</h1>
             <br />
 
-            <!-- <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Application Submit Request</a>
                 </li>
@@ -30,7 +35,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Service Request Inquiry</a>
                 </li>
-            </ul> -->
+            </ul>
 
             <app-tabs [nav_tabs]="nav_tabs"></app-tabs>
             <br/>
@@ -104,8 +109,8 @@
                 </table>
             </div>
 
-        </div>
+        </div> -->
     </app-main>
-    <div style="min-width: 250px;"></div>
+    <!-- <div style="min-width: 250px;"></div> -->
     <!-- <app-rightnavsection [nav_list]="nav_list"></app-rightnavsection> -->
 </div>
