--- a/src/app/pages/developer/quickstart/quickstart.component.html
+++ b/src/app/pages/developer/quickstart/quickstart.component.html
@@ -95,6 +95,6 @@
             <h5>HTTP Request Data Structure</h5>
         </div>
     </app-main>
-    <div style="min-width: 250px;"></div>
-    <app-rightnavsection [nav_list]="nav_list"></app-rightnavsection>
+    <!-- <div style="min-width: 250px;"></div> -->
+    <!-- <app-rightnavsection [nav_list]="nav_list"></app-rightnavsection> -->
 </div>
