--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,7 @@
 <style>
     main {
         position: relative;
-        /* width: calc(100% - 300px);  */
+        width: -webkit-fill-available;
         padding: 24px 32px;
         /* right:300px; */
     }
