--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -7,9 +7,15 @@
       position: fixed;
       height: -webkit-fill-available;
       width: 100px;
-      font-size: 14px;
+      font-size: 10px;
       font-weight: bold;
     }
+    .dropend:hover .dropdown-menu {
+    display: block;
+    position: fixed;
+    top: 100; /* remove the gap so it doesn't close */
+    z-index: 1;
+}
 </style>
 
 
@@ -18,12 +24,21 @@
     <div class="container-fluid ">
       <ul class="navbar-nav">
         <li class="nav-item mt-2 mb-2">
-          <a class="nav-link" href="/developer/quickstart">
+          <div class="dropend">
+            <a class="nav-link" href="/developer/quickstart">
               <div class="icon text-center text-white">
                 <i class="bi bi-alexa text-white"></i>
                   <p> Quickstart </p>
               </div>
           </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Get Started</a></li>
+              <li><a class="dropdown-item" href="#">Run In Postman</a></li>
+              <li><a class="dropdown-item" href="#">Authentication</a></li>
+              <li><a class="dropdown-item" href="#">Message Structure</a></li>
+              <li><a class="dropdown-item" href="#">Production Environment</a></li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item mt-2 mb-2">
           <a class="nav-link" href="/developer/partners">
