--- a/src/app/pages/developer/quickstart/quickstart.component.html
+++ b/src/app/pages/developer/quickstart/quickstart.component.html
@@ -1,13 +1,3 @@
-<style>
-    .pre {
-        padding: 16px;
-        font-weight: bold;
-        font-size: 16px;
-        border: 1px solid grey;
-        border-radius: 10px;
-    }
-</style>
-
 <div class="d-flex">
     <app-main [nav_list]='nav_list'>
         <div>
@@ -62,20 +52,7 @@
                 before go-live.</p>
             <p>Use provided token as part of https header using key as “X-API-Key” and value as provided token.</p>
 
-            <div class="pre">
-                <p>POST /api/user/inq HTTP/2</p>
-                <p>Host: sandbox.toucanus.net</p>
-                <p>Accept: application/json, text/plain, */*</p>
-                <p>Content-Type: application/json; charset=utf-8</p>
-                <p>X-API-Key: eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJnYXV0YW1AdG91Y2FuIiwiaWF0IjoxNjI2MDk3NzcxLCJle
-                    HAiOjE2MjYxMDQ5NzF9.xijHvprs07UqC_wPajAqaL1aRkB3TAUBBp67atP0AFQ</p>
-                <p>Content-Length: 83</p>
-                <p>Origin: https://sandbox.toucanus.net</p>
-                <p>DNT: 1</p>
-                <p>Connection: keep-alive</p>
-                <p>Referer: https://sandbox.toucanus.net/</p>
-                <p>TE: Trailers</p>
-            </div>
+            <app-code-highlight [codeForHighlightAuto]="auth_http" ></app-code-highlight>
 
             <br /> <br />
 
@@ -85,15 +62,13 @@
 
             <br />
             <h5>HTTP Request header</h5>
-            <div class="pre">
-                <p>Authorization use X-API-Key tag for authentication</p>
-                <p>Content Type application/json</p>
-                <p>Request Method POST</p>
-            </div>
+            <app-code-highlight [codeForHighlightAuto]="http_req_header" ></app-code-highlight>
+            
             <br />
 
             <h5>HTTP Request Data Structure</h5>
         </div>
+        <app-code-highlight [codeForHighlightAuto]="http_request" lang="json"></app-code-highlight>
     </app-main>
     <!-- <div style="min-width: 250px;"></div> -->
     <!-- <app-rightnavsection [nav_list]="nav_list"></app-rightnavsection> -->
