removed unsed components

--- a/src/app/pages/developer/quickstart/quickstart.component.html
+++ b/src/app/pages/developer/quickstart/quickstart.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex">
-    <app-main [nav_list]='nav_list'>
+    <app-main>
         <div>
             <h1>Quickstart</h1>
             <br />
@@ -70,6 +70,4 @@
         </div>
         <app-code-highlight [codeForHighlightAuto]="http_request" lang="json"></app-code-highlight>
     </app-main>
-    <!-- <div style="min-width: 250px;"></div> -->
-    <!-- <app-rightnavsection [nav_list]="nav_list"></app-rightnavsection> -->
 </div>
