--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,4 @@
-
-<div>
-    <app-topnav></app-topnav>
-
-    <div style="display:flex">
-        <app-sidenav></app-sidenav>
-        <router-outlet></router-outlet>
-    </div>
-
+<div class="d-flex">
+    <app-sidebar-nav></app-sidebar-nav>
+    <router-outlet></router-outlet>
 </div>
-
-
-
