--- a/src/app/pages/developer/quickstart/quickstart.component.html
+++ b/src/app/pages/developer/quickstart/quickstart.component.html
@@ -1,9 +1,10 @@
-<div class="d-flex">
-    <app-main>
+<app-main [anchors]="anchors">
+    <div>
+        <h1 id="target_top">Quickstart</h1>
+        <br />
+        
+        <h4 id="get_started">Get Started</h4>
         <div>
-            <h1>Quickstart</h1>
-            <br />
-            <h4>Get Started</h4>
             <p>The Toucan provides a sandbox environment which can be utilized to test your awesome creation before
                 taking
                 them Live. Toucan APIs are HTTP-based Restful API that use JWT token-based authentication. All APIs are
@@ -16,9 +17,11 @@
                 and
                 therefore using Toucan API calls, you can test and debug your apps without referencing any real or live
                 Toucan data.</p>
-            <br />
+        </div>
+        <br />
 
-            <h4>Sandbox</h4>
+        <h4 id="sandbox">Sandbox</h4>
+        <div>
             <p>URL: <a href="https://sandbox.toucanus.com">https://sandbox.toucanus.com</a></p>
 
             <p>You will need a JWT token (also referred as API Key) before any API can be successfully executed on
@@ -36,15 +39,19 @@
 
             <p>Browse through the toucan API guide for request and response message structure, checkout FAQ section and
                 still you have query or suggestions we would love to receive an email at support&#64;toucanus.com</p>
-            <br />
+        </div>
+        <br />
 
-            <h4>Run in Postman button</h4>
+        <h4 id="run_in_postman">Run in Postman button</h4>
+        <div>
             <p>The quicker you can get users started, the better. One way to jumpstart the configuration of an API is by
                 using Run in Postman buttons. This can reduce more lengthy and tedious explanations about parameters and
                 other configurations for an API.</p>
+        </div>
+        <br />
 
-            <br />
-            <h4>Authentication</h4>
+        <h4 id="authentication">Authentication</h4>
+        <div>
             <p>You will receive a token (API keys) via email to authenticate requests. Each token is valid only for a
                 specific time frame generally six months. In case you lose them or need a fresh token please use contact
                 form to generate.</p>
@@ -52,22 +59,23 @@
                 before go-live.</p>
             <p>Use provided token as part of https header using key as “X-API-Key” and value as provided token.</p>
 
-            <app-code-highlight [codeForHighlightAuto]="auth_http" ></app-code-highlight>
+            <app-code-highlight [codeForHighlightAuto]="auth_http"></app-code-highlight>
+        </div>
+        <br /> <br />
 
-            <br /> <br />
-
-            <h4>Message Structure</h4>
+        <h4 id="message_structure">Message Structure</h4>
+        <div>
             <p>Toucan used REST based HTTP POST message structure with http header and http data. HTTP Data include
                 header and payload structure as described below</p>
 
             <br />
-            <h5>HTTP Request header</h5>
-            <app-code-highlight [codeForHighlightAuto]="http_req_header" ></app-code-highlight>
-            
+            <h5 id="http_req_header">HTTP Request header</h5>
+            <app-code-highlight [codeForHighlightAuto]="http_req_header"></app-code-highlight>
+
             <br />
 
-            <h5>HTTP Request Data Structure</h5>
+            <h5 id="http_req">HTTP Request Data Structure</h5>
+            <app-code-highlight [codeForHighlightAuto]="http_request" lang="json"></app-code-highlight>
         </div>
-        <app-code-highlight [codeForHighlightAuto]="http_request" lang="json"></app-code-highlight>
-    </app-main>
-</div>
+    </div>
+</app-main>
