--- a/src/app/pages/developer/quickstart/quickstart.component.html
+++ b/src/app/pages/developer/quickstart/quickstart.component.html
@@ -1,4 +1,4 @@
-<app-main [anchors]="anchors">
+<app-main [anchors]="anchors" [hasOnPageAnchors]="hasOnPageAnchors">
     <div>
         <h1 id="target_top">Quickstart</h1>
         <br />
