--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -1,13 +1,31 @@
-<div class="fixed-top">
-    <header class="bg-light shadow d-flex">
-        <div class="logo_title"></div>
-        <div class="ms-auto d-flex">
-            <button class="btn btn-light px-5">Home</button>
-            <button class="btn btn-light px-5">Products</button>
-            <button class="btn btn-light px-5">Solutions</button>
-            <button class="btn btn-light px-5">Resources</button>
-            <button class="btn btn-light px-5 active">Developer</button>
-            <button class="btn btn-light px-5">About Us</button>
+<nav>
+    <div class="topbar">
+        <div class="logo_search">
+            <div>
+                <img src="/assets/toucan_docs.jpg" alt="">
+            </div>
+            <div class="search-box">
+                <div><i class="bi bi-search"></i></div>
+                <input type="text" placeholder="Search Documentation">
+                <div class="slash"><i class="bi bi-slash-lg"></i></div>
+            </div>
         </div>
-    </header>
-</div>
+        <div class="navs_buttons">
+            <div class="item">
+                <a>Pricing</a>
+            </div>
+            <div class="item active">
+                <a>API Reference</a>
+            </div>
+            <div class="item">
+                <a>Support</a>
+            </div>
+            <div class="item">
+                <a>Login</a>
+            </div>
+            <div class="item singup">
+                <a>Sign Up</a>
+            </div>
+        </div>
+    </div>
+</nav>
