--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-topnav></app-topnav> -->
+<app-topnav></app-topnav>
 <div class="d-flex">
     <app-sidebar-nav></app-sidebar-nav>
     <router-outlet></router-outlet>
