--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -15,7 +15,7 @@
                 <a>Pricing</a>
             </div>
             <div class="item active">
-                <a>API Reference</a>
+                <a href="/developer/quickstart">API Reference</a>
             </div>
             <div class="item">
                 <a>Support</a>
