--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-topnav></app-topnav>
 <div class="d-flex">
     <app-sidebar-nav></app-sidebar-nav>
-    <router-outlet></router-outlet>
+    <div style="width: calc(-200px + 99vw)">
+        <router-outlet></router-outlet>
+    </div>
 </div>
